# listnot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
apps/api/: main.py
apps/dashboard/: app.py
docs/: API_CONTRACT.md  DATA_DICTIONARY.md  DELIVERY_PLAN.md  DEPLOYMENT.md  PRIVACY_MODEL.md  QC_MODEL.md  SDD.md
docs/ADR/: 0001-modular-monolith.md  0002-hmac-pseudonymization.md  0003-synthetic-data-first.md  0004-sqlite-to-postgres-path.md
scripts/: demo_local.py  generate_secret.py  generate_synthetic_data.py  scan_for_forbidden_identifiers.py
src/pucv_aq_qc/: __init__.py  analytics.py
src/pucv_aq_qc/audit/: __init__.py  logger.py
src/pucv_aq_qc/config/: __init__.py  settings.py
src/pucv_aq_qc/database/: __init__.py  ids.py  init_db.py  models.py  session.py
src/pucv_aq_qc/identity/: __init__.py  exceptions.py  hmac_id.py  models.py  rut.py
src/pucv_aq_qc/ingestion/: __init__.py  contracts.py  csv_loader.py  validators.py
src/pucv_aq_qc/privacy/: __init__.py  aggregation.py  export_policy.py  forbidden.py  suppression.py
src/pucv_aq_qc/qc/: __init__.py  levey_jennings.py  metrics.py  summary.py  westgard.py
src/pucv_aq_qc/reporting/: __init__.py  html_report.py  markdown_report.py
src/pucv_aq_qc/schemas/: __init__.py  campaign.py  (+6 more)
tests/: test_api_stats.py  test_database.py  test_identity_hmac.py  test_ingestion_validation.py  test_no_rut_persistence.py  test_privacy_suppression.py  test_qc_rules.py  test_rut_validation.py  test_schemas.py  test_settings.py  test_synthetic_generation.py
(+5 files in other folders)
